overflow problem solve and make impact section responsive

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,6 @@ font-weight: normal;
   color: white;
   font-size: 16px;
 }
+html, body {
+  overflow-x: hidden;
+}
